Modified js code to get wordCounter function working and displaying the correct word count from a user's input. Also, modified toggleMode function to create a functioning dark mode button

--- a/main.css
+++ b/main.css
@@ -1,3 +1,8 @@
 body {
-  background-color: darkred;
+  background-color: orchid;
+}
+
+.new-color {
+  background-color: #0f0f0a;
+  color: beige;
 }
